Changed method type split to only include reflective and resource methods to stay consistent with the new metadata structure